--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
 
       <div>
           <p style="text-align: center">
-            <a href="https://qosf.com/ASOF-join.html">ASOF JOIN</a>
-            <a href="https://qosf.com/market-basket-analysis.html">Association Rule Mining</a>
-            <a href="https://qosf.com/market-basket-analysis.html">Market Basket Analysis</a>
-            <a href="https://qosf.com/applied-overview-of-MATCH_RECOGNIZE-clause.html">MATCH_RECOGNIZE</a>
+            <a href="https://qosf.com/ASOF-join.html">ASOF JOIN</a> | 
+            <a href="https://qosf.com/market-basket-analysis.html">Association Rule Mining</a> | 
+            <a href="https://qosf.com/market-basket-analysis.html">Market Basket Analysis</a> | 
+            <a href="https://qosf.com/applied-overview-of-MATCH_RECOGNIZE-clause.html">MATCH_RECOGNIZE</a> | 
             <a href="https://qosf.com/skyline-query-pareto-set-maxima.html">Skyline Query</a>
           
         
