--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
             <a href="https://qosf.com/market-basket-analysis.html">Market Basket Analysis</a> | 
             <a href="https://qosf.com/applied-overview-of-MATCH_RECOGNIZE-clause.html">MATCH_RECOGNIZE</a> | 
             <a href="https://qosf.com/skyline-query-pareto-set-maxima.html">Skyline Query</a>
-          
+            <a href="https://analyticsengineering.net/mailman/listinfo/wranglers">Analytics Engineering Mailing List</a>
         
       </p>
       </div>
